# createXcrunch

./: .gitignore  Cargo.toml  README.md  filter.py  filterAAAX.sh  filterBBBX.sh  output.txt  start.sh
src/: lib.rs  main.rs  webgpu.rs
src/kernels/: keccak256.wgsl
